# monkey-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: mdbook.yml  rust.yml
docs/: book.toml
docs/src/: SUMMARY.md  functional.md  intro.md
docs/src/data-types/: README.md
docs/src/features/: README.md  built-ins.md  repl.md
docs/src/syntax/: README.md
src/: eval.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  token.rs
src/eval/: builtin.rs  environment.rs  error.rs  object.rs
src/lexer/: parse.rs
src/parser/: ast.rs  error.rs  precedence.rs
